# Nano.Query.RAG

./: .env.example  .gitignore  Plan.md  Plan_Chinese.md  README.md  next_stage.md  phase_1.md  rag.py  requirements.txt
.github/workflows/: test.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: __init__.py  benchmark.py  chat.py  documents.py  health.py
backend/app/services/: document_service.py  eval_store.py  hybrid_retriever_service.py  llm_service.py  query_rewrite_service.py  rag_service.py  vectorstore_service.py
backend/evals/: run_eval.py
backend/evals/datasets/: sample_eval.jsonl
backend/evals/results/: eval_20260525_031145.json  eval_20260525_080352.json  eval_compare_query_rewrite_20260525_032159.json
backend/tests/: conftest.py  test_api_routes.py  test_config.py  test_document_service.py  test_hybrid_retriever_service.py  test_query_rewrite_service.py  test_rag_service.py
docs/: sample.md  sample.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: benchmark.ts  chat.ts  client.ts  documents.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  SourceCitation.tsx
frontend/src/i18n/: en.ts  index.ts  zh.ts
frontend/src/pages/: BenchmarkPage.tsx  ChatPage.tsx  DocumentsPage.tsx
frontend/src/stores/: chatStore.ts  themeStore.ts
scripts/: demo_bm25.py  demo_bm25_result.txt
