[project]
name = "wtg-query-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.6.0",
    "pypdf>=4.0.0",
    "unstructured>=0.16.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.18",
]
